--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "expo": "^32.0.0",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-snap-carousel": "^3.7.5",
     "react-navigation": "^3.6.1",
+    "react-navigation-transitions": "^1.0.9",
     "react-redux": "^6.0.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
